--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>美设之家爱情表白源码</title>
+		<title>爱你哦</title>
 	    
         <link type="text/css" rel="stylesheet" href="./love1/default.css">
 		<script type="text/javascript" src="./love1/jquery.min.js"></script>
@@ -220,5 +220,5 @@
     })();
     </script>
 
-<center>&copy; <a href="http://meishehome.cn/">美设之家</a></center>
+<center>&copy; <a href="http://www.beliefyy.top/">予夜以星</a></center>
 </body></html>
